harden ordering domain immutability and validation